<resources>
    <string name="app_name">Bill Please</string>
    //String for edit/text view
    <string name="amount">Amount</string>
    <string name="totAmount">Enter Total Amount</string>
    <string name="noPax">No. of Pax</string>
    <string name="Pax">Enter No. of Pax</string>
    <string name="svs">SVS</string>
    <string name="nosvs">No SVS</string>
    <string name="gst">GST</string>
    <string name="nogst">No GST</string>
    <string name="discount">Discount (%)</string>
    <string name="disc">Enter Discount (%)</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="bill">Total Bill:</string>
    <string name="pays">Each Pays:</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
</resources>